# Regime-switching-Monte-Carlo-Simulation

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: comparative_study_design.md  var_validation_derivation.md
models/: __init__.py  backtest_engine.py  comparative_study.py  validation_tests.py
models/monte_carlo/: __init__.py  base_mc.py  verify_cholesky.py
models/network/: __init__.py  contagion.py  density_validation.py  network_engine.py
models/regime/: __init__.py  hmm_engine.py  regime_plot.py
models/sentiment/: __init__.py  sentiment_engine.py
tests/: __init__.py  conftest.py  test_backtest_engine.py
